examples/datalog/18_advanced_patterns/46_moving_average.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_moving_avg
Knowledge graph 'test_moving_avg' created.
Switched to knowledge graph: test_moving_avg
> .kg use test_moving_avg
Switched to knowledge graph: test_moving_avg
> +time_series[(1, 10), (2, 20), (3, 15), (4, 25), (5, 30)].
Inserted 5 fact(s) into 'time_series'.
> +avg_2(T, <AVG:V>) :- time_series(T2, V), T2 >= T - 1, T2 <= T, time_series(T, _).
Script error: Parse error: Invalid term: '<AVG:V>'
