examples/datalog/18_advanced_patterns/46_moving_average.dl
% Test: Moving average simulation
% Expected: Rolling window aggregation
% Category: 18_advanced_patterns
% Priority: P2 - Advanced patterns

.kg create test_moving_avg
.kg use test_moving_avg

+time_series[(1, 10), (2, 20), (3, 15), (4, 25), (5, 30)].

% 2-period average: average of current and previous
+avg_2(T, <AVG:V>) :- time_series(T2, V), T2 >= T - 1, T2 <= T, time_series(T, _).

?- avg_2(T, Avg).

.kg use default
.kg drop test_moving_avg
